@@ -3,6 +3,7 @@ v0.2.1
 - bugfix: config.toml will not ignore custom entries
 - added feature to mark files/folders as drafts
 - added --drafts cli argument
+- added -f cli argument to allow custom config files
 
 
 v0.2.0
